Fix overlay bug on mobile search

--- a/resources/assets/main/sass/_ideaing.scss
+++ b/resources/assets/main/sass/_ideaing.scss
@@ -2331,6 +2331,7 @@ article.product{
   display: none;
   background: $light-grey;
   margin-top: 55px;
+  z-index: 10;
 }
 
 #mobile-side-filters{
